objects/PMC_DH_Quote_Management_Status__mdt.object
<CustomObject>
    <fields>
        <fullName>PMC_DH_Progress_Indicator_Status__c</fullName>
        <label>Progress Indicator Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_StatusLabel__c</fullName>
        <label>PMC_DH_StatusLabel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Summary_Status__c</fullName>
        <label>Summary Status</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <label>Quote Management Status</label>
    <pluralLabel>Quote Management Statuses</pluralLabel>
</CustomObject>